@@ -419,7 +419,7 @@ public class SchemaBuilder implements Schema {
      */
     public Schema build() {
         return new ConnectSchema(type, isOptional(), defaultValue, name, version, doc,
-                parameters == null ? null : Map.copyOf(parameters),
+                parameters == null ? null : Collections.unmodifiableMap(parameters),
                 fields == null ? null : List.copyOf(fields.values()), keySchema, valueSchema);
     }
 
